--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="contact" class="bg-blue-100 py-16 px-4 max-w-5xl mx-auto">
     <h3 class="text-3xl font-semibold mb-6">Contact</h3>
     <p class="text-lg mb-4">Reach out to discuss how we can help your organization leverage the power of geospatial data.</p>
-    <p class="text-lg">📧 Email: <a href="mailto:saintmarrygeospatial@gmail.com" class="underline">saintmarrygeospatial@gmail.com</a></p>
+    <p class="text-lg">📧 Email: <a href="mailto:admin@saintmarrygeospatial.com" class="underline">admin@saintmarrygeospatial.com</a></p>
     <p class="text-lg">📞 Phone: 240-481-2353</p>
     <p class="text-lg">📍 Lorton, Virginia</p>
   </section>
