--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Saint Marry Geospatial Consultancy</title>
+  <title>Saint Marry Geospatial | GIS Consulting & Mapping Services</title>
+  <meta name="description" content="Saint Marry Geospatial LLC provides GIS consulting, mapping, and geospatial solutions for cities, governments, and businesses.">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://saintmarrygeospatial.com/">
+
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+  
 <body class="bg-gray-100 text-gray-900">
   <header class="bg-white shadow p-4">
     <div class="max-w-7xl mx-auto flex justify-between items-center">
